Cool Compiler/Parser/gen/coolParserParser.java
// Generated from D:/Havana Oh Na Na/CoolParser/src\coolParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class coolParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, INHERITS=2, CASE=3, CLASS=4, FOR=5, DOT=6, ELSE=7, FI=8, ESAC=9, 
		FALSE=10, TRUE=11, IN=12, ISVOID=13, LET=14, LOOP=15, POOL=16, NOT=17, 
		OF=18, NEW=19, THEN=20, WHILE=21, SEMICOLON=22, TILDE=23, LPAREN=24, RPAREN=25, 
		COLON=26, COMMA=27, LARROW=28, RARROW=29, LBRACE=30, RBRACE=31, MINAOP=32, 
		OPS=33, ID=34, TYPE=35, Integer=36, String=37, Whitespace=38, ADDOPS=39, 
		MULOPS=40, ERROR=41;
	public static final int
		RULE_vals = 0, RULE_instance = 1, RULE_var_assign = 2, RULE_var_dec = 3, 
		RULE_var = 4, RULE_math_expr = 5, RULE_cond_stmt = 6, RULE_param = 7, 
		RULE_func_call = 8, RULE_stmt = 9, RULE_code_block = 10, RULE_loop = 11, 
		RULE_ourcase = 12, RULE_if_stmt = 13, RULE_let = 14, RULE_function = 15, 
		RULE_our_class = 16, RULE_our_program = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"vals", "instance", "var_assign", "var_dec", "var", "math_expr", "cond_stmt", 
			"param", "func_call", "stmt", "code_block", "loop", "ourcase", "if_stmt", 
			"let", "function", "our_class", "our_program"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'.'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "';'", "'~'", 
			"'('", "')'", "':'", "','", "'<-'", "'->'", "'{'", "'}'", "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "INHERITS", "CASE", "CLASS", "FOR", "DOT", "ELSE", "FI", 
			"ESAC", "FALSE", "TRUE", "IN", "ISVOID", "LET", "LOOP", "POOL", "NOT", 
			"OF", "NEW", "THEN", "WHILE", "SEMICOLON", "TILDE", "LPAREN", "RPAREN", 
			"COLON", "COMMA", "LARROW", "RARROW", "LBRACE", "RBRACE", "MINAOP", "OPS", 
			"ID", "TYPE", "Integer", "String", "Whitespace", "ADDOPS", "MULOPS", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "coolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public coolParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ValsContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(coolParserParser.String, 0); }
		public TerminalNode FALSE() { return getToken(coolParserParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(coolParserParser.TRUE, 0); }
		public OurcaseContext ourcase() {
			return getRuleContext(OurcaseContext.class,0);
		}
		public Math_exprContext math_expr() {
			return getRuleContext(Math_exprContext.class,0);
		}
		public ValsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterVals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitVals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitVals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValsContext vals() throws RecognitionException {
		ValsContext _localctx = new ValsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_vals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case String:
				{
				setState(36);
				match(String);
				}
				break;
			case FALSE:
				{
				setState(37);
				match(FALSE);
				}
				break;
			case TRUE:
				{
				setState(38);
				match(TRUE);
				}
				break;
			case CASE:
				{
				setState(39);
				ourcase();
				}
				break;
			case TILDE:
			case LPAREN:
			case ID:
			case Integer:
			case ADDOPS:
				{
				setState(40);
				math_expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceContext extends ParserRuleContext {
		public TerminalNode NEW() { return getToken(coolParserParser.NEW, 0); }
		public TerminalNode TYPE() { return getToken(coolParserParser.TYPE, 0); }
		public InstanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterInstance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitInstance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitInstance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstanceContext instance() throws RecognitionException {
		InstanceContext _localctx = new InstanceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(NEW);
			setState(44);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignContext extends ParserRuleContext {
		public TerminalNode LARROW() { return getToken(coolParserParser.LARROW, 0); }
		public ValsContext vals() {
			return getRuleContext(ValsContext.class,0);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public Var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterVar_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitVar_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitVar_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_assignContext var_assign() throws RecognitionException {
		Var_assignContext _localctx = new Var_assignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(LARROW);
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CASE:
			case FALSE:
			case TRUE:
			case TILDE:
			case LPAREN:
			case ID:
			case Integer:
			case String:
			case ADDOPS:
				{
				setState(47);
				vals();
				}
				break;
			case NEW:
				{
				setState(48);
				instance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(coolParserParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(coolParserParser.TYPE, 0); }
		public Var_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterVar_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitVar_dec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitVar_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_decContext var_dec() throws RecognitionException {
		Var_decContext _localctx = new Var_decContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(51);
			match(COLON);
			setState(52);
			match(TYPE);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(coolParserParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(coolParserParser.SEMICOLON, 0); }
		public Var_assignContext var_assign() {
			return getRuleContext(Var_assignContext.class,0);
		}
		public Var_decContext var_dec() {
			return getRuleContext(Var_decContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(ID);
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(55);
					var_dec();
					}
				}

				setState(58);
				var_assign();
				}
				break;
			case 2:
				{
				setState(59);
				var_dec();
				}
				break;
			}
			setState(62);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_exprContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(coolParserParser.Integer, 0); }
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public TerminalNode TILDE() { return getToken(coolParserParser.TILDE, 0); }
		public TerminalNode ID() { return getToken(coolParserParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(coolParserParser.LPAREN, 0); }
		public List<Math_exprContext> math_expr() {
			return getRuleContexts(Math_exprContext.class);
		}
		public Math_exprContext math_expr(int i) {
			return getRuleContext(Math_exprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(coolParserParser.RPAREN, 0); }
		public TerminalNode ADDOPS() { return getToken(coolParserParser.ADDOPS, 0); }
		public TerminalNode MULOPS() { return getToken(coolParserParser.MULOPS, 0); }
		public Math_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterMath_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitMath_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitMath_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Math_exprContext math_expr() throws RecognitionException {
		return math_expr(0);
	}

	private Math_exprContext math_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Math_exprContext _localctx = new Math_exprContext(_ctx, _parentState);
		Math_exprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_math_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(73);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					{
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TILDE) {
						{
						setState(65);
						match(TILDE);
						}
					}

					setState(68);
					match(Integer);
					}
					}
					break;
				case 2:
					{
					{
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TILDE) {
						{
						setState(69);
						match(TILDE);
						}
					}

					setState(72);
					func_call();
					}
					}
					break;
				}
				}
				break;
			case 2:
				{
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TILDE) {
					{
					setState(75);
					match(TILDE);
					}
				}

				setState(78);
				match(ID);
				}
				break;
			case 3:
				{
				setState(79);
				match(LPAREN);
				setState(80);
				math_expr(0);
				setState(81);
				match(RPAREN);
				}
				break;
			case 4:
				{
				{
				setState(83);
				match(ADDOPS);
				}
				setState(84);
				math_expr(3);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(93);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new Math_exprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_math_expr);
						setState(87);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						{
						setState(88);
						match(MULOPS);
						}
						setState(89);
						math_expr(3);
						}
						break;
					case 2:
						{
						_localctx = new Math_exprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_math_expr);
						setState(90);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						{
						setState(91);
						match(ADDOPS);
						}
						setState(92);
						math_expr(2);
						}
						break;
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Cond_stmtContext extends ParserRuleContext {
		public List<ValsContext> vals() {
			return getRuleContexts(ValsContext.class);
		}
		public ValsContext vals(int i) {
			return getRuleContext(ValsContext.class,i);
		}
		public TerminalNode OPS() { return getToken(coolParserParser.OPS, 0); }
		public TerminalNode NOT() { return getToken(coolParserParser.NOT, 0); }
		public TerminalNode LPAREN() { return getToken(coolParserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(coolParserParser.RPAREN, 0); }
		public Cond_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterCond_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitCond_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitCond_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cond_stmtContext cond_stmt() throws RecognitionException {
		Cond_stmtContext _localctx = new Cond_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cond_stmt);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==NOT) {
						{
						setState(98);
						match(NOT);
						}
					}

					{
					setState(101);
					vals();
					setState(102);
					match(OPS);
					setState(103);
					vals();
					}
					}
					break;
				case 2:
					{
					setState(105);
					vals();
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(108);
					match(LPAREN);
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==NOT) {
						{
						setState(109);
						match(NOT);
						}
					}

					{
					setState(112);
					vals();
					setState(113);
					match(OPS);
					setState(114);
					vals();
					}
					}
					break;
				case 2:
					{
					setState(116);
					vals();
					setState(117);
					match(RPAREN);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public ValsContext vals() {
			return getRuleContext(ValsContext.class,0);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_param);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CASE:
			case FALSE:
			case TRUE:
			case TILDE:
			case LPAREN:
			case ID:
			case Integer:
			case String:
			case ADDOPS:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				vals();
				}
				break;
			case NEW:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				instance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(coolParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(coolParserParser.ID, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(coolParserParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(coolParserParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(coolParserParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(coolParserParser.RPAREN, i);
		}
		public TerminalNode DOT() { return getToken(coolParserParser.DOT, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(coolParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(coolParserParser.COMMA, i);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(127);
					match(ID);
					}
					break;
				case LPAREN:
					{
					{
					setState(128);
					match(LPAREN);
					setState(129);
					instance();
					setState(130);
					match(RPAREN);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(134);
				match(DOT);
				}
				break;
			}
			setState(137);
			match(ID);
			setState(138);
			match(LPAREN);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CASE) | (1L << FALSE) | (1L << TRUE) | (1L << NEW) | (1L << TILDE) | (1L << LPAREN) | (1L << ID) | (1L << Integer) | (1L << String) | (1L << ADDOPS))) != 0)) {
				{
				setState(139);
				param();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(140);
					match(COMMA);
					setState(141);
					param();
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(149);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ValsContext vals() {
			return getRuleContext(ValsContext.class,0);
		}
		public TerminalNode ID() { return getToken(coolParserParser.ID, 0); }
		public Var_assignContext var_assign() {
			return getRuleContext(Var_assignContext.class,0);
		}
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof coolParserListener ) ((coolParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof coolParserVisitor ) return ((coolParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmt);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				vals();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(152);
				match(ID);
				setState(153);
				var_assign();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(154);
